integration with api

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,9 +2,7 @@
 <div class="scroller" (scroll)="onScroll($event)">
   <div id="promo" class="page promo-container">
     <div class="motto-container">
-      <object class="logo" type="image/svg+xml" data="./assets/img/logo.svg">
-        ooOo
-      </object>
+      <img class="logo" src="./assets/img/logo.svg" alt="ooOo"/>
       <h1>Kéro</h1>
       <h2 class="meet">Meet.</h2>
       <h2 class="share">Share.</h2>
