--- a/src/app/image/image-upload.component.html
+++ b/src/app/image/image-upload.component.html
@@ -8,7 +8,7 @@
     <div class="controls">
       <button class="button" (click)="back()">Back</button>
       <button class="button danger" (click)="clearFiles()" [disabled]="isFileListEmpty()">Clear</button>
-      <button class="button" (click)="uploadFiles()" [disabled]="canUpload()">Upload</button>
+      <button class="button" (click)="uploadFiles()" [disabled]="isUploadDisabled()">Upload</button>
     </div>
 
     <mat-chip-list>
