--- a/src/scss/spinner.scss
+++ b/src/scss/spinner.scss
@@ -9,6 +9,17 @@
   animation: spin 1s linear infinite;
 }
 
+.loader {
+  margin: 0px;
+  padding: 0px;
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  justify-content:center;
+  align-items:center;
+}
+
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
